--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,14 @@
-<p>users works!</p>
+<mat-card class="example-card">
+  <mat-card-header class="header">
+    <h1>Usuarios</h1>
+    <button mat-raised-button color="primary" (click)="createUser()"
+    class="custom-button">Crear Usuario</button>
+  </mat-card-header>
+  <mat-card-content style="height: 95%;">
+    <ag-grid-angular style="height: 90%;margin:1%" class="ag-theme-balham" [rowData]="rowData"
+      [columnDefs]="columnDefs" [rowHeight]="35">
+    </ag-grid-angular>
+  </mat-card-content>
+
+</mat-card>
+
