--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
+@import "~ag-grid-community/dist/styles/ag-grid.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -30,3 +32,9 @@ $spartan-elite-theme: mat-light-theme($spartan-elite-primary, $spartan-elite-acc
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.custom-button{
+  font-size: 1rem;
+  width: 10%;
+  height: 2rem;
+}
+
