Add all users to BD

--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,6 +1,8 @@
 <mat-card class="example-card">
   <mat-card-header class="header">
     <h1>Usuarios</h1>
+    <p>Activos: {{activos}}</p>
+    <p>Inactivos: {{inactivos}}</p>
     <button mat-raised-button color="primary" (click)="createUser()"
     class="custom-button">Crear Usuario</button>
   </mat-card-header>
