Creacion de Planes

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,5 +3,6 @@
     <a>Spartan Elite Gym</a>
     <span class="example-spacer"></span>
     <a [routerLink]="[ '/users' ]" routerLinkActive="active">Usuarios</a>
+    <a [routerLink]="[ '/planes' ]" routerLinkActive="active">Planes</a>
   </mat-toolbar-row>
 </mat-toolbar>
