--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,8 +1,10 @@
 <mat-card class="example-card">
   <mat-card-header class="header">
     <h1>Usuarios</h1>
-    <p>Activos: {{activos}}</p>
-    <p>Inactivos: {{inactivos}}</p>
+    <div>
+      <p class="activos">Activos: {{activos}}</p>
+      <p class="inactivos">Inactivos: {{inactivos}}</p>
+    </div>
     <button mat-raised-button color="primary" (click)="createUser()"
     class="custom-button">Crear Usuario</button>
   </mat-card-header>
