--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -11,3 +11,16 @@
   align-items: center;
   justify-content: space-evenly;
 }
+
+.activos{
+  color: green;
+  margin: 0;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+.inactivos{
+  color: red;
+  margin: 0;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
