--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,5 +4,6 @@
     <span class="example-spacer"></span>
     <a [routerLink]="[ '/users' ]" routerLinkActive="active">Usuarios</a>
     <a [routerLink]="[ '/planes' ]" routerLinkActive="active">Planes</a>
+    <a [routerLink]="[ '/inventario' ]" routerLinkActive="active">Inventario</a>
   </mat-toolbar-row>
 </mat-toolbar>
