--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -7,6 +7,8 @@
     </div>
     <button mat-raised-button color="primary" (click)="createUser()"
     class="custom-button">Crear Usuario</button>
+    <button mat-raised-button color="primary" (click)="realizarPago()"
+    class="custom-button">Pagos</button>
   </mat-card-header>
   <mat-card-content style="height: 95%;">
     <ag-grid-angular style="height: 90%;margin:1%" class="ag-theme-balham" [rowData]="rowData"
