--- a/src/app/pages/inventarios/create-inventario/create-inventario.component.html
+++ b/src/app/pages/inventarios/create-inventario/create-inventario.component.html
@@ -30,8 +30,8 @@
     </mat-grid-tile>
     <mat-grid-tile>
       <mat-form-field class="fieldFullWidth">
-        <input autocomplete="off" matInput placeholder="Utilidad" disabled="true" [(ngModel)]="utilidad"
-          name="utilidad" required>
+        <input autocomplete="off" matInput placeholder="Utilidad" disabled="true" [(ngModel)]="utilidad" name="utilidad"
+          required>
       </mat-form-field>
     </mat-grid-tile>
   </mat-grid-list>
