--- a/src/app/pages/inventarios/facturar/facturar.component.html
+++ b/src/app/pages/inventarios/facturar/facturar.component.html
@@ -49,5 +49,5 @@
 </div>
 <div mat-dialog-actions style="flex-direction: row; justify-content: flex-end;">
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <!-- <button mat-button (click)="create()">{{esEditar?'Guardar Cambios':'Crear Producto'}}</button> -->
+  <button mat-button (click)="continuar()" color="primary">Continuar</button>
 </div>
