--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,6 @@
     <a [routerLink]="[ '/users' ]" routerLinkActive="active">Usuarios</a>
     <a [routerLink]="[ '/planes' ]" routerLinkActive="active">Planes</a>
     <a [routerLink]="[ '/inventario' ]" routerLinkActive="active">Inventario</a>
-    <a (click)="openFacturacion()">Facturacion</a>
+    <a [routerLink]="[ '/facturas' ]" routerLinkActive="active">Facturas</a>
   </mat-toolbar-row>
 </mat-toolbar>
