--- a/src/app/pages/facturacion/lista-facturas/lista-facturas.component.html
+++ b/src/app/pages/facturacion/lista-facturas/lista-facturas.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
   <mat-card-content style="height: 90%;">
     <ag-grid-angular style="height: 85%;margin:1%" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs"
-      [rowHeight]="45">
+      [rowHeight]="45" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </mat-card-content>
 </mat-card>
