--- a/src/app/pages/inventarios/inventarios.component.html
+++ b/src/app/pages/inventarios/inventarios.component.html
@@ -1,11 +1,11 @@
 <mat-card class="example-card">
   <mat-card-header class="header">
     <h1>Inventario</h1>
-    <button mat-raised-button color="primary" class="custom-button" (click)="createInventario()">Agregar Producto</button>
+    <button mat-raised-button color="primary" class="custom-button" style="width: 12%;" (click)="createInventario()">Nuevo Producto</button>
   </mat-card-header>
   <mat-card-content style="height: 90%;">
     <ag-grid-angular style="height: 85%;margin:1%" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs"
-      [rowHeight]="45">
+      [rowHeight]="45"  (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </mat-card-content>
 </mat-card>
