--- a/src/app/pages/inventarios/facturar/monto-facturar/monto-facturar.component.html
+++ b/src/app/pages/inventarios/facturar/monto-facturar/monto-facturar.component.html
@@ -23,5 +23,5 @@
 </div>
 <div mat-dialog-actions style="flex-direction: row; justify-content: flex-end;">
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button (click)="finalizar()" color="primary">Finalizar</button>
+  <button mat-button (click)="finalizar()" style="background-color: black;color:white;">Finalizar</button>
 </div>
