--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,7 +15,7 @@
     <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
   </mat-card-content>
   <mat-card-actions class="seg-login-actions">
-    <button mat-raised-button (click)="login(username,password)" color="primary"
+    <button mat-raised-button (click)="login(username,password)" style="background-color: black;color:white;"
       style="font-size: 1.3rem;width: 20%;height: 2.5rem;font-family: 'Righteous', cursive;">Login</button>
     <button mat-raised-button (click)="register()"
       style="font-size: 1.3rem;width: 20%;height: 2.5rem;font-family: 'Righteous', cursive;">Registro</button>
