--- a/src/app/pages/facturacion/lista-facturas/lista-facturas.component.html
+++ b/src/app/pages/facturacion/lista-facturas/lista-facturas.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
   <mat-card-header class="header">
     <h1>Facturas</h1>
-    <button mat-raised-button color="primary" class="custom-button" (click)="openFacturacion()">Facturar</button>
+    <button mat-raised-button style="background-color: black;color:white;" class="custom-button" (click)="openFacturacion()">Facturar</button>
   </mat-card-header>
   <mat-card-content style="height: 90%;">
     <ag-grid-angular style="height: 85%;margin:1%" class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs"
