--- a/src/app/pages/users/create-user/create-user.component.html
+++ b/src/app/pages/users/create-user/create-user.component.html
@@ -84,5 +84,5 @@
 </div>
 <div mat-dialog-actions style="flex-direction: row; justify-content: flex-end;">
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button (click)="create()">{{esEditar?'Guardar Cambios':'Crear Usuario'}}</button>
+  <button mat-button (click)="create()" style="background-color: black;color:white;">{{esEditar?'Guardar Cambios':'Crear Usuario'}}</button>
 </div>
