--- a/src/app/pages/users/pagos/pagos.component.html
+++ b/src/app/pages/users/pagos/pagos.component.html
@@ -60,5 +60,5 @@
 </div>
 <div mat-dialog-actions style="flex-direction: row; justify-content: flex-end;">
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button color="primary" (click)="confirmar()" >Confirmar</button>
+  <button mat-button style="background-color: black;color:white;" (click)="confirmar()" >Confirmar</button>
 </div>
