--- a/src/app/pages/facturacion/facturacion.component.html
+++ b/src/app/pages/facturacion/facturacion.component.html
@@ -45,7 +45,7 @@
             </td>
           </tr>
         </table><br>
-        <p>Atendido por: Ingry Mora</p>
+        <p>Atendido por: {{factura.usuarioAdmin}}</p>
         <p>Gracias por su compra...</p><br>
         <p>spartanelitegym@gmail.com - 3112467920 - www.spartanelitegym.co</p>
       </mat-card-content>
