--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar style="background-color: black;">
   <mat-toolbar-row>
     <img style="width: 5%;" src="../../assets/logo-black-bg.png">
-    <a style="font-size: small;">{{email}}</a>
+    <p style="font-size: small;">{{email}}</p>
     <span class="example-spacer"></span>
     <a [routerLink]="[ '/users' ]" routerLinkActive="active">Usuarios</a>
     <a [routerLink]="[ '/planes' ]" routerLinkActive="active">Planes</a>
