--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -6,6 +6,7 @@
   justify-content: center;
 
   &-card{
+    background-color: #eaeaea;
     height: 50%;
     width: 50%;
   }
@@ -28,4 +29,24 @@
     display: flex !important;
     justify-content: center;
   }
+
+  .button-login{
+    font-size: 1.3rem;
+    width: 20%;
+    height: 2.5rem;
+    font-family: 'Righteous', cursive;
+    color:white;
+    background-color: black;
+  }
+  
+  .button-register{
+    font-size: 1.3rem;
+    width: 20%;
+    height: 2.5rem;
+    font-family: 'Righteous', cursive;
+    color:white;
+    background-color: #ff741d;
+  }
+
+
 }
